--- a/default.css
+++ b/default.css
@@ -88,7 +88,7 @@ input { border: none; background: #eee; color: #999 }
 #infoBox{
 	float:left;
 	width:300px;
-	height:462px;
+	height:442px;
 	margin:5px 0 0 5px;
 	padding:0px;
 	border-color:#06F;
@@ -130,7 +130,7 @@ input { border: none; background: #eee; color: #999 }
 	float:left;
 	width:300px;
 	margin:0px 0px 0px 5px;
-	height:80px;
+	height:100px;
 	border-style:solid;
 	border-width:thin;
 }
@@ -191,12 +191,27 @@ float:right;
 #loadingsec{
 	height:25px;
 	float:right;
-	margin:0px 50px 5px 50px;
+	margin:0px 80px 5px 30px;
 }
 
 #butts{
 	float:left;
-	width: 800px;
+	width: 888px;
+}
+
+#slider{
+	float:left;
+	clear:both;
+	margin:5px 0px 5px 1px;
+	width:200px;
+}
+
+#sliderholder{
+	float:left; width:300px; margin-left:55px;
+}
+
+#amount{
+	border:0; color:#f6931f; font-weight:bold; width:194px;
 }
 
 
